# Pilot

./: .gitignore  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.next/: trace
.next/cache/: .rscinfo
.next/server/: next-font-manifest.js  next-font-manifest.json  pages-manifest.json  server-reference-manifest.json  webpack-api-runtime.js  webpack-runtime.js
backend/: pyproject.toml
backend/pilot_api/: element.py  run.py  utils.py
backend/pilot_api/controller/: project_controller.py
backend/pilot_api/database/: project_database.py
backend/pilot_api/model/: base_bandit_algorithm.py  dynamic_thompson_sampling.py
backend/table_definitions/: elements.sql
components/: element-card.tsx  loader.tsx  navbar.tsx  project-search-filter.tsx  theme-toggle.tsx
components/ui/: button.tsx  dropdown-menu.tsx  sidebar.tsx
lib/: constants.ts  utils.ts
src/backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
src/backend/backend/: project.py
src/backend/backend/model/: base_bandit_algorithm.py  dynamic_thompson_sampling.py
src/backend/pilot_api/: element.py  main.py  middleware.py  models.py  run.py  storage_client.py  utils.py
src/backend/pilot_api/controller/: element_controller.py  project_controller.py
src/backend/pilot_api/database/: base_client.py  element_database.py  project_database.py
src/backend/pilot_api/model/: dynamic_thompson_sampling.py  model_manager.py
src/backend/pilot_api/routes/: elements.py  projects.py
src/backend/table_definitions/: elements.sql  projects.sql
(+55 files in other folders)
