[tool.poetry]
name = "pilot-api"
version = "0.1.0"
description = ""
authors = ["grohith327 <grohith327@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
numpy = "^2.1.0"
supabase = "^2.10.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
